<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#272626"
    tools:context=".Menu">

    <ImageView
        android:id="@+id/imagenLogo"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:adjustViewBounds="true"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/logo" />

    <ImageButton
        android:id="@+id/btnClientes"
        android:layout_width="89dp"
        android:layout_height="89dp"
        android:layout_marginTop="116dp"
        android:adjustViewBounds="false"
        android:background="#555252"
        android:foreground="?attr/selectableItemBackgroundBorderless"
        android:clickable="true"
        android:onClick="Cliente"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.242"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/imagenLogo"
        app:srcCompat="@drawable/iconocliente" />

    <TextView
        android:id="@+id/textClientes"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="4dp"
        android:text="@string/txtCliente"
        android:textColor="#FFFFFF"
        android:textSize="20sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.253"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/btnClientes" />

    <ImageButton
        android:id="@+id/btnCotizacion"
        android:layout_width="89dp"
        android:layout_height="89dp"
        android:layout_marginTop="116dp"
        android:background="#555252"
        android:foreground="?attr/selectableItemBackgroundBorderless"
        android:onClick="Cotizacion"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.574"
        app:layout_constraintStart_toEndOf="@+id/btnClientes"
        app:layout_constraintTop_toBottomOf="@+id/imagenLogo"
        app:srcCompat="@drawable/iconocotizacion" />

    <TextView
        android:id="@+id/txtCotizacion"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="4dp"
        android:text="@string/txtCotizaciones"
        android:textColor="#FFFFFF"
        android:textSize="20sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.84"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/btnCotizacion" />

    <ImageButton
        android:id="@+id/imageButton2"
        android:layout_width="89dp"
        android:layout_height="89dp"
        android:layout_marginTop="88dp"
        android:background="#555252"
        android:foreground="?attr/selectableItemBackgroundBorderless"
        android:onClick="Factura"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.242"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textClientes"
        app:srcCompat="@drawable/iconofactura" />

    <TextView
        android:id="@+id/textView3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="4dp"
        android:text="@string/txtFacturas"
        android:textColor="#FFFFFF"
        android:textSize="20sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.258"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/imageButton2" />

</androidx.constraintlayout.widget.ConstraintLayout>